--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -7,29 +7,17 @@
 
 
 {% block content %}
-  <header>
-    <div class="carousel slide main-section" data-ride="carousel">
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <div class="image-box">
-            <div class="image-title"> 
-              <h1>Join the Interview <br/> Question Revolution</h1>
-              <p>Encompass Interviews allows people to leverage existing code and make new code to offer unique programming challenges to users 
-                similar to challenges they would encounter in the real world. 
-              </p>
-            </div>
-          </div>
-          <a class="image-button" href="/users/signup">Sign Up</a>
-          <img class="image-screenshot" src="{% static 'images/screenshot.png' %}" alt="" width="500" height="500">
-        </div>
-      </div>
-    </div>
-  </header>
-
   <!-- Page Content -->
   <div class="container homepage-container">
-    
-    <!-- About -->
+    <div class="col-lg-12 mb-12 landing-section">
+      <div class="landing-text">
+        <h1 class="landing-title">Join the Interview Question Revolution</h1>
+        <p class="landing-description">Encompass Interviews allows people to leverage existing code and make new code to offer unique programming challenges to users 
+          similar to challenges they would encounter in the real world. 
+        </p>
+        <center><a class="image-button" href="/users/signup">Sign Up</a></center>
+      </div>
+    </div>
     <div class="row" style="margin-bottom: 3vh">
       <div class="col-lg-6 mb-6 left-section">
         <div class="about-section">
