--- a/frontend_templates/interview_q/all.html
+++ b/frontend_templates/interview_q/all.html
@@ -16,7 +16,7 @@
                         {% for interview_q in interview_questions %}
                             <div class="col-md-4">
                                 <div class="card mb-4 box-shadow">
-                                <div class="card-body">
+                                <div class="card-body question-box">
                                     <p class="card-text question-card-title">{{ interview_q.name }}</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-toolbar">
