--- a/frontend_templates/interview_q/send.html
+++ b/frontend_templates/interview_q/send.html
@@ -19,7 +19,7 @@
       <input class="form-control" type="datetime-local" name="start_date" id="start_date"><br />
       <label for="start_date">Interview Expiration Date</label>
       <input class="form-control" type="datetime-local" name="expiration_date" id="expiration_date"><br />
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Send Interview Question</button>
+      <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Send Interview Question</button>
     </form>
 </div>
 </center>
