--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -29,15 +29,17 @@
               <a class="nav-link" href="/about" style="color: #7373fd; font-weight: bold;">About Us</a>
             </li>
             {% if user.is_authenticated %}
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" style="color: #7373fd; font-weight: bold;" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Interview Questions
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                  <a class="dropdown-item" href="/questions/answer">Answer</a>
-                  <a class="dropdown-item" href="/interview_questions">Create</a>
-                </div>
+
+              {% if user.is_from_company %}
+              <li class="nav-item">
+                  <a class="nav-link" href="/interview_questions" style="color: #7373fd; font-weight: bold;">Manage Questions</a>
               </li>
+              {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/questions/answer" style="color: #7373fd; font-weight: bold;">Answer Questions</a>
+                </li>
+              {% endif %}
+
               <li class="nav-item">
                   <a class="nav-link" href="/users/logout" style="color: #7373fd; font-weight: bold;">Logout</a>
               </li>
