--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -67,7 +67,7 @@
                             <div class="centered">Code<label class="switch"><input type="checkbox" name="supporting_switch_1" id="supporting_switch_1"><span class="slider round"></span></label> File</div>
                             <div class="centered"><input class="inputfile" type="file" id="supporting_file_1" name="supporting_file_1"></div>
                             <div><input class="form-control name-of-file" id="supporting_body_name_1" maxlength="128" name="supporting_body_name_1" placeholder="Name of file"></input></div>
-                            <div id="supporting_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
+                            <div id="supporting_body_1" class="code-editor"></div>
                             <textarea name="supporting_body_1"></textarea>
                         </div>
                         </div>
@@ -125,7 +125,7 @@
                                     <div class="centered">Code<label class="switch"><input type="checkbox" name="starter_switch_1" id="starter_switch_1"><span class="slider round"></span></label> File</div>
                                     <div class="centered"><input class="inputfile" type="file" id="starter_file_1" name="starter_file_1"></div>
                                     <div><input class="form-control name-of-file" id="starter_body_name_1" maxlength="128" name="starter_body_name_1" placeholder="Name of file"></input></div>
-                                    <div id="starter_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
+                                    <div id="starter_body_1" class="code-editor"></div>
                                     <textarea name="starter_body_1"></textarea>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                     <div class="centered">Code<label class="switch"><input type="checkbox" name="example_switch_1" id="example_switch_1"><span class="slider round"></span></label> File</div>
                                     <div class="centered"><input class="inputfile" type="file" id="example_file_1" name="example_file_1"></div>
                                     <div><input class="form-control name-of-file" id="example_body_name_1" maxlength="128" name="example_body_name_1" placeholder="Name of file"></input></div>
-                                    <div id="example_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
+                                    <div id="example_body_1" class="code-editor"></div>
                                     <textarea name="example_body_1"></textarea>
                                 </div>
                             </div>
@@ -184,7 +184,7 @@
                             <div class="centered">Code<label class="switch"><input type="checkbox" name="test_switch_1" id="test_switch_1"><span class="slider round"></span></label> File</div>
                             <div class="centered"><input class="inputfile" type="file" id="test_file_1" name="test_file_1"></div>
                             <div><input class="form-control name-of-file" id="test_body_name_1" maxlength="128" name="test_body_name_1" placeholder="Name of file"></input></div>
-                            <div id="test_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
+                            <div id="test_body_1" class="code-editor"></div>
                             <textarea name="test_body_1"></textarea>
                         </div>
                     </div>
@@ -226,7 +226,7 @@ to the user with a @visible @not_visible annotation</span>
                                     <div class="centered">Code<label class="switch"><input type="checkbox" name="solution_switch_1" id="solution_switch_1"><span class="slider round"></span></label> File</div>
                                     <div class="centered"><input class="inputfile" type="file" id="solution_file_1" name="solution_file_1"></div>
                                     <div><input class="form-control name-of-file" id="solution_body_name_1" maxlength="128" name="solution_body_name_1" placeholder="Name of file"></input></div>
-                                    <div id="solution_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
+                                    <div id="solution_body_1" class="code-editor"></div>
                                     <textarea name="solution_body_1"></textarea>
                                 </div>
                             </div>
