--- a/frontend_templates/registration/login.html
+++ b/frontend_templates/registration/login.html
@@ -19,7 +19,7 @@
       <label for="password" class="sr-only">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br />
       <br /><br />
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+      <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Sign In</button>
     </form>
 </div>
 </center>
