--- a/frontend_templates/interview_q_instance/browse.html
+++ b/frontend_templates/interview_q_instance/browse.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="row">
-                     <a href="/questions/open" class="btn btn-primary btn-lg open-q-btn">Browse Open Questions</a>
+                     <a href="/interview_questions/open" class="btn btn-primary btn-lg open-q-btn">Browse Open Questions</a>
                     </div>
                 </div>
             {% else %}
