--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -70,7 +70,7 @@
                                         <div class="centered">Code<label class="switch"><input type="checkbox" name="supporting_switch_{{ forloop.counter }}" id="supporting_switch_{{ forloop.counter }}" disabled><span class="slider round"></span></label> File</div>
                                         <div class="centered"><input class="inputfile" type="file" id="supporting_file_{{ forloop.counter }}" name="supporting_file_{{ forloop.counter }}"></div>
                                         <div><input class="form-control name-of-file" id="supporting_body_name_{{ forloop.counter }}" maxlength="128" name="supporting_body_name_{{ forloop.counter }}" placeholder="Name of file" value="{{ support_code_name }}"></input></div>
-                                        <div id="supporting_body_{{ forloop.counter }}" style="height: 20vh; width: 100%; margin-bottom: 1vh">{{ supporting_code_contents|index:forloop.counter0 }}</div>
+                                        <div id="supporting_body_{{ forloop.counter }}" class="code-editor">{{ supporting_code_contents|index:forloop.counter0 }}</div>
                                         <textarea name="supporting_body_{{ forloop.counter }}"></textarea>
                                     </div>
                                 {% endfor %}
@@ -132,7 +132,7 @@
                                             <div class="centered">Code<label class="switch"><input type="checkbox" name="starter_switch_{{ forloop.counter }}" id="starter_switch_{{ forloop.counter }}"><span class="slider round"></span></label> File</div>
                                             <div class="centered"><input class="inputfile" type="file" id="starter_file_{{ forloop.counter }}" name="starter_file_{{ forloop.counter }}"></div>
                                             <div><input class="form-control name-of-file" id="starter_body_name_{{ forloop.counter }}" maxlength="128" name="starter_body_name_{{ forloop.counter }}" placeholder="Name of file" value="{{ starter_code_name }}"></input></div>
-                                            <div id="starter_body_{{ forloop.counter }}" style="height: 20vh; width: 100%; margin-bottom: 1vh">{{ starter_code_contents|index:forloop.counter0 }}</div>
+                                            <div id="starter_body_{{ forloop.counter }}" class="code-editor">{{ starter_code_contents|index:forloop.counter0 }}</div>
                                             <textarea name="starter_body_{{ forloop.counter }}"></textarea>
                                         </div>
                                     {% endfor %}
@@ -163,7 +163,7 @@
                                             <div class="centered">Code<label class="switch"><input type="checkbox" name="example_switch_{{ forloop.counter }}" id="example_switch_{{ forloop.counter }}"><span class="slider round"></span></label> File</div>
                                             <div class="centered"><input class="inputfile" type="file" id="example_file_{{ forloop.counter }}" name="example_file_{{ forloop.counter }}"></div>
                                             <div><input class="form-control name-of-file" id="example_body_name_{{ forloop.counter }}" maxlength="128" name="example_body_name_{{ forloop.counter }}" placeholder="Name of file" value="{{ example_code_name }}"></input></div>
-                                            <div id="example_body_{{ forloop.counter }}" style="height: 20vh; width: 100%; margin-bottom: 1vh">{{ example_code_contents|index:forloop.counter0 }}</div>
+                                            <div id="example_body_{{ forloop.counter }}" class="code-editor">{{ example_code_contents|index:forloop.counter0 }}</div>
                                             <textarea name="example_body_{{ forloop.counter }}"></textarea>
                                         </div>
                                     {% endfor %}
@@ -191,7 +191,7 @@
                                 <div class="centered">Code<label class="switch"><input type="checkbox" name="test_switch_1" id="test_switch_1"><span class="slider round"></span></label> File</div>
                                 <div class="centered"><input class="inputfile" type="file" id="test_file_1" name="test_file_1"></div>
                                 <div><input class="form-control name-of-file" id="test_body_name_1" maxlength="128" name="test_body_name_1" placeholder="Name of file" value="{{ test_case_name }}"></input></div>
-                                <div id="test_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh">{{ test_case_code_contents }}</div>
+                                <div id="test_body_1" class="code-editor">{{ test_case_code_contents }}</div>
                                 <textarea name="test_body_1"></textarea>
                             </div>
                         </div>
@@ -234,7 +234,7 @@ to the user with a @visible @not_visible annotation</span>
                                             <div class="centered">Code<label class="switch"><input type="checkbox" name="solution_switch_{{ forloop.counter }}" id="solution_switch_{{ forloop.counter }}"><span class="slider round"></span></label> File</div>
                                             <div class="centered"><input class="inputfile" type="file" id="solution_file_{{ forloop.counter }}" name="solution_file_{{ forloop.counter }}"></div>
                                             <div><input class="form-control name-of-file" id="solution_body_name_{{ forloop.counter }}" maxlength="128" name="solution_body_name_{{ forloop.counter }}" placeholder="Name of file" value="{{ solution_code_name }}"></input></div>
-                                            <div id="solution_body_{{ forloop.counter }}" style="height: 20vh; width: 100%; margin-bottom: 1vh">{{ solution_code_contents|index:forloop.counter0 }}</div>
+                                            <div id="solution_body_{{ forloop.counter }}" class="code-editor">{{ solution_code_contents|index:forloop.counter0 }}</div>
                                             <textarea name="solution_body_{{ forloop.counter }}"></textarea>
                                         </div>
                                     {% endfor %}
