--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -11,6 +11,7 @@
 
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <link href="{% static 'main/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'main/css/base.css' %}" rel="stylesheet">
   <script src="{% static 'main/vendor/jquery/jquery.min.js' %}"></script>
   {% block css_imports %}
   {% endblock %}
@@ -56,8 +57,19 @@
         </div>
       </div>
     </nav>
-  {% block content %}
-  {% endblock %}
+  <div class="page-body">
+    {% block content %}
+    {% endblock %}
+  </div>  
+  <footer class="bg-dark footer fixed-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mb-12">
+            <p class="text-white footer-copyright"> Encompass Interviews &copy; 2019 <span class="footer-items"><a href="/about" class="footer-item">About</a> | <a href="/contact" class="footer-item">Contact</a></span> </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   <script src="{% static 'main/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
