--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -37,22 +37,21 @@
         <h3 class="col-md-12 offer-section-header">What We Offer</h3>
         <h3 class="col-md-12 offer-section-header" style="letter-spacing: -.5vw; margin-bottom: 4vh;">---</h3>
         <div class="col-md-4 offer-item">
-          <i class="fas fa-brain fa-4x homepage-icon"></i><br>
+          <i class="fas fa-brain fa-5x homepage-icon"></i><br>
           <p class="offer-title">Integrated Problems</p>
-          <p class="offer-description">We allow you to incorporate your code to create 
-            unique problems that involve APIs, example code and much more.
+          <p class="offer-description">We allow you to incorporate your existing code, declare APIs, create example code snippets and write tests to create programming challenges that cannot be created anywhere else online.
           </p>
         </div>
         <div class="col-md-4 offer-item">
-          <i class="fas fa-tasks fa-4x homepage-icon"></i>
+          <i class="fas fa-tasks fa-5x homepage-icon"></i>
           <p class="offer-title">Total Control</p>
           <p class="offer-description">Use whatever code you would like. Write all the test cases you need. We have you covered.
           </p>
         </div>
         <div class="col-md-4 offer-item">
-          <i class="fas fa-shield-alt fa-4x homepage-icon"></i>
+          <i class="fas fa-shield-alt fa-5x homepage-icon"></i>
           <p class="offer-title">Library Security</p>
-          <p class="offer-description">We will make sure that your code that supports the solution is kept safe and away from any prying eyes.
+          <p class="offer-description">We will make sure your code that supports the user submission is kept safe and away from any prying eyes.
           </p>
         </div>
     </div>
@@ -78,26 +77,4 @@
     </div>
     </div>
   <!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 mb-4 footer-section">
-          <p class="footer-header-text">About</p>
-        </div>
-        <div class="col-lg-4 mb-4 footer-section">
-          <p class="footer-header-text">Resources</p>
-        </div>
-        <div class="col-lg-4 mb-4 footer-section">
-          <p class="footer-header-text">Contact</p>
-        </div>
-        <div class="col-lg-12 mb-12">
-          <p class="m-0 text-center text-white">Copyright &copy; Encompass Interviews 2019</p>
-        </div>
-      </div>
-    </div>
-    <!-- /.container -->
-  </footer>
-
 {% endblock %}
