--- a/frontend_templates/info/about.html
+++ b/frontend_templates/info/about.html
@@ -18,7 +18,9 @@
         <div class="row">
           <div class="col-md-8">
             <h2 class="section-header">About Us</h2>
-            <p class="section-body">Encompass Interviews is an online platform leading the charge to change the way technical programming interview questions are done. We believe that thee current way that programming interviews are done, primarily through algorithm based interviews, do not stress skills that are important in an actually programming job. This leads to low signal for the company and high stress for the applicant. We do this by . By offering different questions on our platform, we are taking the first step to allowing people’s dreams to become true.
+            <p class="section-body">Encompass Interviews is an online platform leading the charge to change the way technical programming interview questions are done. We believe that the current way that programming interviews are done, primarily through algorithm based interviews, do not stress skills that are important in an actually programming job. This leads to low signal for the company and high stress for the applicant.
+               We attempt to change this by offering different types of questions on our platform that stress skills such as reading existing code, using APIs, and solving implementation challenges.
+               We are taking the first step to allowing people’s dreams to become true.
             </p>
           </div>
           <div class="col-md-4">
@@ -31,9 +33,9 @@
             <h2 class="section-header">The Team</h2><br/>
           </div>
           <div class="col-lg-3 person-block">
-            <img class="rounded-circle person-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle person-image" src="{% static 'images/team/mike.jpeg' %}" alt="Generic placeholder image" width="140" height="140">
             <h2 class="person-title">Mike</h2>
-            <p class="person-text">Mike is a engineering and business student at Upenn.</p>
+            <p class="person-text">Mike is a engineering and business student at UPenn.</p>
           </div>
         </div>
         <hr />
