--- a/frontend_templates/registration/signup.html
+++ b/frontend_templates/registration/signup.html
@@ -24,6 +24,8 @@
       {% endif %}
       <label for="email" class="sr-only">Email address</label>
       <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus><br />
+      <input type="text" id="first_name" name="first_name" class="form-control" placeholder="First Name" required maxlength="32"><br />
+      <input type="text" id="last_name" name="last_name" class="form-control" placeholder="Last Name" required maxlength="32"><br />
       <label for="password" class="sr-only">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br />
       <label for="password2" class="sr-only">Confirm Password</label>
