--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -61,7 +61,7 @@
     {% block content %}
     {% endblock %}
   </div>  
-  <footer class="bg-dark footer fixed-bottom">
+  <footer class="bg-dark footer">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mb-12">
