password confirmation and reset

--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mb-12">
-            <p class="text-white footer-copyright"> Encompass Interviews &copy; 2019 <span class="footer-items"><a href="/about" class="footer-item">About</a> | <a href="/contact" class="footer-item">Contact</a></span> </p>
+            <p class="text-white footer-copyright"> Encompass Interviews &copy; 2019 <span class="footer-items"><a href="/about" class="footer-item">About</a> </span> </p>
           </div>
         </div>
       </div>
