--- a/frontend_templates/interview_q/all.html
+++ b/frontend_templates/interview_q/all.html
@@ -33,7 +33,11 @@
                     
                     <div class="create-section">
                         <h2 class="create-section-title">Create a new interview question: </h2><br />
-                        <a href="/interview_questions/create" class="btn btn-lg btn-outline-primary  create-section-button">Create</a>
+                        {% if can_user_make_questions %}
+                            <a href="/interview_questions/create" class="btn btn-lg btn-outline-primary  create-section-button">Create</a>
+                        {% else %}
+                            <p class="create-section-text">You must have creator status to create a question. You can become a creator <a href="/users/enroll">here</a></p><br />
+                        {% endif %}
                     </div>
                 </div>
              
