--- a/frontend_templates/registration/login.html
+++ b/frontend_templates/registration/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block css_imports %}
+<link href="{% static 'main/css/signup.css' %}" rel="stylesheet">
 {% endblock %}
 
 
@@ -25,6 +26,8 @@
       <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus><br />
       <label for="password" class="sr-only">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br />
+      <br />
+      <p><a href="/users/password_reset">Forgot password?</a></p>
       <br /><br />
       <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Sign In</button>
     </form>
