redesign home page

--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -35,25 +35,24 @@
     </div>
     <div class="row offer-section">
         <h3 class="col-md-12 offer-section-header">What We Offer</h3>
-        <h3 class="col-md-12 offer-section-header" style="letter-spacing: -.5vw; margin-bottom: 4vh;">---</h3>
-        <div class="col-md-4 offer-item">
-          <i class="fas fa-brain fa-5x homepage-icon"></i><br>
-          <p class="offer-title">Integrated Problems</p>
-          <p class="offer-description">We allow you to incorporate your existing code, declare APIs, create example code snippets and write tests to create programming challenges that cannot be created anywhere else online.
-          </p>
-        </div>
-        <div class="col-md-4 offer-item">
-          <i class="fas fa-tasks fa-5x homepage-icon"></i>
-          <p class="offer-title">Total Control</p>
-          <p class="offer-description">Use whatever code you would like. Write all the test cases you need. We have you covered.
-          </p>
-        </div>
-        <div class="col-md-4 offer-item">
-          <i class="fas fa-shield-alt fa-5x homepage-icon"></i>
-          <p class="offer-title">Library Security</p>
-          <p class="offer-description">We will make sure your code that supports the user submission is kept safe and away from any prying eyes.
-          </p>
-        </div>
+          <div class="col-lg-4 mb-4">
+            <div class="offer-section-item">
+              <h3 class="about-section-header">Integrated Problems</h3>
+              <p class="about-section-text">We allow you to incorporate your existing code, declare APIs, create example code snippets and write tests to create programming challenges that cannot be created anywhere else online.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+              <div class="offer-section-item">
+                <h3 class="about-section-header">Total Control</h3>
+                <p class="about-section-text">Use whatever code you would like. Write all the test cases you need. We have you covered.</p>
+              </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="offer-section-item">
+              <h3 class="about-section-header">Library Security</h3>
+              <p class="about-section-text">We will make sure your code that supports the user submission is kept safe and away from any prying eyes.</p>
+             </div>
+          </div>
     </div>
     <div class="open-questions">
       <h1 class="open-questions-title">Explore Example Questions</h1>
